fix events registeration link spacing on mobile view

--- a/less/_components/events/eclipsefdn-registration.less
+++ b/less/_components/events/eclipsefdn-registration.less
@@ -18,6 +18,9 @@
   p{
     margin-bottom:20px;
   }
+  li {
+    margin-bottom: 5px;
+  }
 }
 
 .eclipsefdn-registration-links:only-child { 
